--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap');
+// @import "animate.compat.css";
 @import "../../node_modules/@glidejs/glide/src/assets/sass/glide.core";
 
 // Global
@@ -24,4 +25,6 @@
 @import 'components/contact-wrapper';
 @import 'components/form-wrapper';
 @import 'components/details-wrapper';
+@import 'components/modal-wrapper';
+
 
