--- a/src/stylesheets/components/modal-wrapper.scss
+++ b/src/stylesheets/components/modal-wrapper.scss
@@ -23,7 +23,10 @@
             background: map-get($colors, primary );
             text-align: center;
             color: #ffffff;
-            padding-bottom: 10rem;
+            padding-bottom: 23rem;
+            clip-path: polygon(50% 100%, -45% 0, 145% 0);
+            z-index: 8;
+            position: relative;
         }
 
         >.close{
@@ -79,8 +82,10 @@
         text-align: center;
         background: #fff;
         padding: 4rem 0;
-        margin-top: -8rem;
+        margin-top: -21rem;
         box-shadow: 0px 0px 7px 2px #00000026;
+        position: relative;
+        z-index: 8;
 
         >.modal-content{
             max-width: 43em;
