--- a/src/stylesheets/_base.scss
+++ b/src/stylesheets/_base.scss
@@ -1,3 +1,23 @@
+::-webkit-scrollbar {
+    width: 8px;
+    background-color: hsla(0,0%,96%,.4);
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: rgba(85,85,85,.6);
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    border-radius: 0;
+    background-color: #f5f5f5;
+}
+
+
 * {
     padding: 0px;
     margin: 0px;
