--- a/src/stylesheets/components/main-container.scss
+++ b/src/stylesheets/components/main-container.scss
@@ -135,6 +135,34 @@
             animation: animGetBig 1.8s forwards ease-out;
         }
 
+        >.profile{
+            &{
+                width: 200px;
+                height: 200px;
+                margin: auto;
+                border-radius: 50%;
+                position: relative;
+                margin-bottom: 22px;
+                overflow: hidden;
+                border: 5px solid #1dafbf;
+                transition: .3s;
+                cursor: pointer;
+            }
+
+            &:hover{
+                transform: scale(1.1);
+            }
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                transform: scale(1.38) translate(-25px, 14px);
+            }
+
+
+        }
+
         @keyframes animGetBig{
             from{ 
                 opacity: 0;
