--- a/src/stylesheets/components/main-container.scss
+++ b/src/stylesheets/components/main-container.scss
@@ -22,6 +22,7 @@
             font-family: "Montserrat", sans-serif;
             margin-bottom: 0;
             font-size: 1.5em;
+            margin-top: 23px;
 
 
             @media #{$min-tablet} {
@@ -114,10 +115,9 @@
             height: calc(100vh - 8rem);
             padding-top: 70px;
             position: relative;
-            // display: flex;
-            // flex-direction: column;
-            // align-items: center;
-            // justify-content: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
 
         @media #{$min-big-desktop}{
@@ -129,35 +129,17 @@
         }
 
         >.thumbnail{
-            width: 192px;
-            position: relative;
-            z-index: 9;
-            animation: animGetBig 1.8s forwards ease-out;
-        }
 
-        >.profile{
-            &{
-                width: 200px;
-                height: 200px;
-                margin: auto;
-                border-radius: 50%;
-                position: relative;
-                margin-bottom: 22px;
-                overflow: hidden;
-                border: 5px solid #1dafbf;
-                transition: .3s;
-                cursor: pointer;
-            }
-
-            &:hover{
-                transform: scale(1.1);
-            }
+           
 
             img{
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                transform: scale(1.38) translate(-25px, 14px);
+                cursor: pointer;
+                width: 250px;
+                transition: .3s;
+
+                &:hover{
+                    transform: scale(1.1);
+                }
             }
 
 
