--- a/src/stylesheets/components/main-wrapper.scss
+++ b/src/stylesheets/components/main-wrapper.scss
@@ -4,28 +4,30 @@
         display: grid;
         grid-template-rows: auto 1fr auto;
         height: 100%;
+        background: url(../images/bg_header.png) no-repeat 30% -5%;
+        background-size: 115%;
     }
 
-    @media #{$min-netbook} {
-        background:
-        url(../images/bg1.png)no-repeat;
-        background-position-x: 187%;
-        background-position-y: -10%;
-    }
+    // @media #{$min-netbook} {
+    //     background:
+    //     url(../images/bg1.png)no-repeat;
+    //     background-position-x: 187%;
+    //     background-position-y: -10%;
+    // }
 
-    @media #{$min-medium-desktop}{
-        background-position-x: 151%;
-        background-position-y: -12%;
-    }
+    // @media #{$min-medium-desktop}{
+    //     background-position-x: 151%;
+    //     background-position-y: -12%;
+    // }
 
-    @media #{$min-large-desktop} {
-        background-position-x: 121%;
-        background-position-y: -7%;
-    }
+    // @media #{$min-large-desktop} {
+    //     background-position-x: 121%;
+    //     background-position-y: -7%;
+    // }
 
-    @media #{$min-big-desktop}{
-        background-position-x: 103%;
-        background-position-y: -3%;
-    }
+    // @media #{$min-big-desktop}{
+    //     background-position-x: 103%;
+    //     background-position-y: -3%;
+    // }
    
 }
