--- a/src/stylesheets/components/nav-list.scss
+++ b/src/stylesheets/components/nav-list.scss
@@ -27,9 +27,9 @@
         display: block;
         padding: 6px 28px;
 
-        @media #{$min-netbook} {
-            font-size: 1em;
-        }
+        // @media #{$min-netbook} {
+        //     font-size: 1em;
+        // }
     }
     
 }
