--- a/src/stylesheets/components/main-container.scss
+++ b/src/stylesheets/components/main-container.scss
@@ -112,21 +112,26 @@
     &.-intro{
         
         &{
-            height: calc(100vh - 8rem);
-            padding-top: 70px;
+            height: calc(100vh - 5rem);
             position: relative;
             display: flex;
             flex-direction: column;
             justify-content: center;
+            padding: 0;
+            margin-bottom: 30px;
         }
 
-        @media #{$min-big-desktop}{
-            padding-top: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
+        // @media screen and (max-width:650px){
+        //     height: calc(100vh - 5rem);
+        // }
+
+        // @media #{$min-big-desktop}{
+        //     padding-top: 0;
+        //     display: flex;
+        //     flex-direction: column;
+        //     align-items: center;
+        //     justify-content: center;
+        // }
 
         >.thumbnail{
 
@@ -139,6 +144,11 @@
 
                 &:hover{
                     transform: scale(1.1);
+                }
+
+
+                @media screen and (min-width: 2000px){
+                    width: 350px;
                 }
             }
 
@@ -207,11 +217,23 @@
     }
 
     &.-skills{
+       
+        @media screen and (max-width: 1366px) {
+            max-width: 53rem;
+        }
+
+        @media #{$ipad}{
+            max-width: 37rem;
+        }
+
+        @media screen and (max-width: 740px) {
+            max-width: 21rem;
+        }
 
         .glide{
             display: none;
 
-            @media screen and (min-width: 1280px) {
+            @media screen and (min-width: 1100px) {
                 display: block;
             }
         }
@@ -227,6 +249,11 @@
                 align-items: center;
                 justify-content: center;
                 padding: 30px;
+
+                @media screen and (max-width: 1366px){
+                    height: 130px;
+                    width: 157px;
+                }
 
                 &:hover{
                     cursor: grabbing;
