--- a/src/stylesheets/components/main-nav.scss
+++ b/src/stylesheets/components/main-nav.scss
@@ -1,6 +1,11 @@
 .main-nav{
     &{
         color: #000000;
-        height: 8rem;
+        height: 5rem;
     }
+
+    // @media screen and (max-width: 650px) {
+    //     height: 5rem;
+    // }
+
 }
