--- a/src/stylesheets/components/main-wrapper.scss
+++ b/src/stylesheets/components/main-wrapper.scss
@@ -8,26 +8,13 @@
         background-size: 115%;
     }
 
-    // @media #{$min-netbook} {
-    //     background:
-    //     url(../images/bg1.png)no-repeat;
-    //     background-position-x: 187%;
-    //     background-position-y: -10%;
-    // }
 
-    // @media #{$min-medium-desktop}{
-    //     background-position-x: 151%;
-    //     background-position-y: -12%;
-    // }
+    @media screen and (max-width: 1500px){
+        background-position-y: 0%;
+    }
 
-    // @media #{$min-large-desktop} {
-    //     background-position-x: 121%;
-    //     background-position-y: -7%;
-    // }
+    @media screen and (max-width: 650px){
+        background-position-y: 0%;
+    }
 
-    // @media #{$min-big-desktop}{
-    //     background-position-x: 103%;
-    //     background-position-y: -3%;
-    // }
-   
 }
