--- a/src/stylesheets/components/mini-wrapper.scss
+++ b/src/stylesheets/components/mini-wrapper.scss
@@ -3,11 +3,17 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
         grid-gap: 2rem;
+        justify-items:center;
     }
 
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1100px) {
         display: none;
     }
+
+    @media screen and (max-width: 740px) {
+        grid-gap: 3rem 1rem;
+    }
+
     
 
     >.mini{
@@ -17,7 +23,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: auto;
         padding: 30px;
 
         img{
