--- a/src/stylesheets/components/main-container.scss
+++ b/src/stylesheets/components/main-container.scss
@@ -118,7 +118,7 @@
             flex-direction: column;
             justify-content: center;
             padding: 0;
-            margin-bottom: 30px;
+            padding-bottom: 61px;
         }
 
         >.thumbnail{
