--- a/src/stylesheets/components/main-container.scss
+++ b/src/stylesheets/components/main-container.scss
@@ -201,6 +201,23 @@
     }
 
     &.-works{
+
+        @media screen and (max-width: 1366px) {
+            max-width: 65rem;
+        }
+
+        @media screen and (max-width: 1160px) {
+            max-width: 50rem;
+        }
+
+        @media screen and (max-width: 900px) {
+            max-width: 28rem;
+        }
+
+        @media screen and (max-width: 500px) {
+            max-width: 23rem;
+        }
+
         padding-bottom: 58px;
     }
 
