--- a/src/stylesheets/components/cards-wrapper.scss
+++ b/src/stylesheets/components/cards-wrapper.scss
@@ -61,12 +61,11 @@
         }
 
         &:nth-child(5){
-            background-image: url(../images/DASHBOARD.png);
-            background-position-x: left;
+            background-image: url(../images/SA.png);
         }
 
         &:nth-child(6){
-            background-image: url(../images/bright.png);
+            background-image: url(../images/DASHBOARD.png);
             background-position-x: left;
         }
 
