--- a/src/stylesheets/components/modal-wrapper.scss
+++ b/src/stylesheets/components/modal-wrapper.scss
@@ -8,6 +8,7 @@
         display: none;
         overflow-y: auto;
         padding-bottom: 4rem;
+       
     }
 
     &.-open{
@@ -76,6 +77,14 @@
         }
     }
 
+    &#regapp >.modal-container >.modal-content>.gallery{
+        >.image{
+            &:nth-child(1){
+                box-shadow: unset;
+            }
+        }
+    }
+
     >.modal-container{
         max-width: 55em;
         margin: 0 auto;
@@ -122,17 +131,14 @@
                 }
 
                 >.image{
-                    width: 250px;
+                    width: 100%;
 
                     
 
                     &:nth-child(1){
                         grid-area: primary;
-                        width: 500px;
-
-                        @media screen and (max-width: 1160px){
-                            width: 250px;
-                        }
+                        width: 100%;
+                        box-shadow: 0px 0px 7px 1px #00000047;
                     }
 
                     &:nth-child(2){
